--- a/config/sync/views.view.site_search.yml
+++ b/config/sync/views.view.site_search.yml
@@ -226,7 +226,7 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: ''
+            label: 'Site Wide Search'
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
