Add config ignore module and set webforms and xml site to be ignored, split sys performance

--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -12,7 +12,8 @@ module:
   webform_devel: 0
 theme: {  }
 blacklist: {  }
-graylist: {  }
+graylist:
+  - system.performance
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
