--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
     "drupal/entity_embed": "^1.0@beta",
     "drupal/environment_indicator": "~3",
     "drupal/eu_cookie_compliance": "^1.0",
+    "drupal/extlink": "^1.1",
     "drupal/field_group": "^1.0@RC",
     "drupal/flippy": "1.x-dev",
     "drupal/focal_point": "~1",
