--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -95,6 +95,7 @@ module:
   webform_ui: 0
   xmlsitemap_custom: 0
   xmlsitemap_engines: 0
+  extlink: 1
   menu_link_content: 1
   pathauto: 1
   xmlsitemap: 1
