--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -27,12 +27,13 @@ settings:
             - JustifyLeft
             - JustifyCenter
             - JustifyRight
-            - Indent
         -
           name: Lists
           items:
             - BulletedList
             - NumberedList
+            - Indent
+            - Outdent
         -
           name: Media
           items:
@@ -40,17 +41,26 @@ settings:
         -
           name: Miscellaneous
           items:
-            - Linkit
-            - DrupalUnlink
             - Table
             - HorizontalRule
-            - Blockquote
+            - Linkit
+            - DrupalUnlink
             - Maximize
         -
           name: Tools
           items:
             - RemoveFormat
             - Source
+            - Undo
+            - Redo
+        -
+          name: Pasting
+          items:
+            - Cut
+            - Copy
+            - Paste
+            - PasteFromWord
+            - PasteText
         -
           name: 'Block Formatting'
           items:
