--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -60,6 +60,8 @@ module:
   menu_block: 0
   menu_ui: 0
   metatag: 0
+  metatag_open_graph: 0
+  metatag_twitter_cards: 0
   node: 0
   oc_custom: 0
   options: 0
