--- a/config/sync/metatag.metatag_defaults.403.yml
+++ b/config/sync/metatag.metatag_defaults.403.yml
@@ -7,5 +7,7 @@ _core:
 id: '403'
 label: '403 access denied'
 tags:
-  canonical_url: '[site:url]'
   shortlink: '[site:url]'
+  title: '[current-page:title] | [site:name]'
+  robots: 'noindex, nofollow, noarchive, nosnippet, noodp, noydir, noimageindex, notranslate'
+  canonical_url: '[site:url]'
