--- a/config/sync/metatag.metatag_defaults.node__blog.yml
+++ b/config/sync/metatag.metatag_defaults.node__blog.yml
@@ -7,23 +7,29 @@ _core:
 id: node__blog
 label: 'Content: Blog'
 tags:
+  shortlink: '[current-page:url:unaliased]'
+  title: '[node:title] | [site:name]'
+  content_language: en
   canonical_url: '[current-page:url:absolute]'
-  content_language: '[current-page:url:unaliased]'
+  news_keywords: '[node:field_tags]'
   description: '[node:summary]'
   image_src: '[node:field_banner:entity:field_media_image]'
-  title: '[node:title] | [site:name]'
+  generator: 'Drupal 8 (http://drupal.org)'
   article_modified_time: '[node:changed:custom:c]'
   article_published_time: '[node:created:custom:c]'
-  article_section: blog
-  og_description: '[node:summary]'
+  og_type: blog
   og_image: '[node:field_banner:entity:field_media_image]'
-  og_site_name: '[site:name]'
-  og_title: '[node:title]'
-  og_type: Blog
+  og_updated_time: '[node:changed:custom:c]'
   og_url: '[current-page:url:absolute]'
-  twitter_cards_description: '[node:summary]'
+  og_description: '[node:summary]'
+  og_country_name: US
+  article_tag: '[node:field_tags]'
+  og_site_name: '[site:name]'
+  article_section: Blog
+  og_title: '[node:title]'
   twitter_cards_image: '[node:field_banner:entity:field_media_image]'
-  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image]:alt'
   twitter_cards_page_url: '[current-page:url:absolute]'
-  twitter_cards_title: '[node:title]'
+  twitter_cards_description: '[node:summary]'
+  twitter_cards_image_alt: '[node:field_banner:entity:field_media_image]:alt'
   twitter_cards_type: summary
+  twitter_cards_title: '[node:title]'
