--- a/config/sync/metatag.metatag_defaults.taxonomy_term.yml
+++ b/config/sync/metatag.metatag_defaults.taxonomy_term.yml
@@ -8,4 +8,5 @@ id: taxonomy_term
 label: 'Taxonomy term'
 tags:
   title: '[term:name] | [site:name]'
+  robots: 'noindex, nofollow, noarchive, nosnippet, noodp, noydir, noimageindex, notranslate'
   description: '[term:description]'
