Upgrade media to core

--- a/config/sync/core.entity_form_display.media.document.default.yml
+++ b/config/sync/core.entity_form_display.media.document.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
-    - media_entity.bundle.document
+    - media.type.document
   module:
     - file
 _core:
@@ -16,7 +16,7 @@ bundle: document
 mode: default
 content:
   field_media_categories:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -39,4 +39,5 @@ content:
 hidden:
   created: true
   path: true
+  status: true
   uid: true
