--- a/config/sync/core.entity_view_mode.media.large.yml
+++ b/config/sync/core.entity_view_mode.media.large.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: AF5AZyRxyWv2BLAiQAQYNQHERfZ5bH9SQI4sPw5Fo6g
 id: media.large
