--- a/config/sync/core.entity_view_mode.media.small.yml
+++ b/config/sync/core.entity_view_mode.media.small.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: dtf48yW7u8_tFpPzoimowdKha7KgNmVVHcqqNa1AgAc
 id: media.small
