--- a/config/sync/field.storage.media.field_caption.yml
+++ b/config/sync/field.storage.media.field_caption.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: HM26fi1lErKZOdewo5uIQAhHRwKdaocYzh9CThWdEls
 id: media.field_caption
