--- a/config/sync/media.type.document.yml
+++ b/config/sync/media.type.document.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   module:
     - crop
-    - media_entity_document
 third_party_settings:
   crop:
     image_field: field_media_file
@@ -13,9 +12,9 @@ _core:
 id: document
 label: Document
 description: ''
-type: document
+source: file
 queue_thumbnail_downloads: false
 new_revision: false
-type_configuration:
+source_configuration:
   source_field: field_media_file
 field_map: {  }
