--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
     "drupal/default_content": "^1.0.0@alpha",
     "drupal/devel": "1.x-dev",
     "drupal/easy_breadcrumb": "^1.6",
-    "drupal/entity_browser": "^1.1",
+    "drupal/entity_browser": "^2.0",
     "drupal/entity_embed": "^1.0@beta",
     "drupal/environment_indicator": "~3",
     "drupal/eu_cookie_compliance": "^1.0",
@@ -73,8 +73,11 @@
     "drupal/libraries": "3.x-dev",
     "drupal/link_attributes": "^1.0",
     "drupal/linkit": "^4.3",
-    "drupal/media_entity": "^1.6",
+    "drupal/media_entity": "^2.0",
+    "drupal/media_entity_actions": "^1.0@alpha",
+    "drupal/media_entity_browser": "^2.0",
     "drupal/media_entity_document": "^1.1",
+    "drupal/media_entity_generic": "^1.0@alpha",
     "drupal/media_entity_image": "^1.2",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
@@ -87,8 +90,8 @@
     "drupal/superfish": "~1",
     "drupal/token": "^1.0@RC",
     "drupal/twig_tweak": "^2.0",
-    "drupal/video_embed_field": "^1.4",
-    "drupal/video_embed_media": "^1.4",
+    "drupal/video_embed_field": "^2.0",
+    "drupal/video_embed_media": "^2.0",
     "drupal/views_infinite_scroll": "^1.5",
     "drupal/webform": "~5",
     "drupal/xmlsitemap": "^1.0@alpha",
