--- a/config/sync/core.entity_form_display.media.image.background_image.yml
+++ b/config/sync/core.entity_form_display.media.image.background_image.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.thumbnail
-    - media_entity.bundle.image
+    - media.type.image
   module:
     - focal_point
 _core:
