--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -1,4 +1,4 @@
-uuid: 6fff6908-5bea-4bc4-b88d-5712abe814c6
+uuid: e2b9601c-7730-4dac-8e18-5a635f81ae01
 langcode: en
 status: true
 dependencies:
@@ -7,11 +7,9 @@ dependencies:
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.thumbnail
-    - media_entity.bundle.image
+    - media.type.image
   module:
     - focal_point
-_core:
-  default_config_hash: WmZ_KlGGXerFk5RYOhQaeGENB0lvOkddlMqpoa3JHgM
 id: media.image.default
 targetEntityType: media
 bundle: image
@@ -20,36 +18,37 @@ content:
   field_caption:
     type: string_textfield
     weight: 2
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    region: content
   field_media_categories:
+    type: options_select
     weight: 3
+    region: content
     settings: {  }
     third_party_settings: {  }
-    type: options_select
-    region: content
   field_media_image:
+    type: image_focal_point
     weight: 0
+    region: content
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
       preview_link: true
       offsets: '50,50'
     third_party_settings: {  }
-    type: image_focal_point
-    region: content
   name:
     type: string_textfield
     weight: 1
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    region: content
 hidden:
   created: true
   path: true
+  status: true
   uid: true
