--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.media.video.field_media_categories
     - field.field.media.video.field_media_video_embed_field
-    - media_entity.bundle.video
+    - media.type.video
   module:
     - video_embed_field
 _core:
@@ -38,4 +38,5 @@ content:
 hidden:
   created: true
   path: true
+  status: true
   uid: true
