--- a/config/sync/core.entity_form_mode.media.background_image.yml
+++ b/config/sync/core.entity_form_mode.media.background_image.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: lsTYZ2NQVxcQzUuj2PETSES29L8bbeEgidH3730ZUYc
 id: media.background_image
