--- a/config/sync/core.entity_view_display.media.document.default.yml
+++ b/config/sync/core.entity_view_display.media.document.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
-    - media_entity.bundle.document
+    - media.type.document
   module:
     - file
     - layout_builder
