--- a/config/sync/core.entity_view_display.media.document.small.yml
+++ b/config/sync/core.entity_view_display.media.document.small.yml
@@ -4,8 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.small
+    - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
-    - media_entity.bundle.document
+    - media.type.document
   module:
     - file
     - layout_builder
@@ -50,6 +51,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
