--- a/config/sync/core.entity_view_display.media.image.large_thumb.yml
+++ b/config/sync/core.entity_view_display.media.image.large_thumb.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.media.large_thumb
     - field.field.media.image.field_caption
     - field.field.media.image.field_media_image
-    - media_entity.bundle.image
+    - media.type.image
     - responsive_image.styles.oc_large_thumb
   module:
     - layout_builder
