--- a/config/sync/core.entity_view_display.media.image.medium.yml
+++ b/config/sync/core.entity_view_display.media.image.medium.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.media.medium
     - field.field.media.image.field_caption
     - field.field.media.image.field_media_image
-    - media_entity.bundle.image
+    - media.type.image
     - responsive_image.styles.medium_500
   module:
     - layout_builder
