--- a/config/sync/core.entity_view_display.media.video.banner.yml
+++ b/config/sync/core.entity_view_display.media.video.banner.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.banner
     - field.field.media.video.field_media_video_embed_field
-    - media_entity.bundle.video
+    - media.type.video
   module:
     - layout_builder
     - layout_discovery
