--- a/config/sync/core.entity_view_display.media.video.default.yml
+++ b/config/sync/core.entity_view_display.media.video.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.media.video.field_media_categories
     - field.field.media.video.field_media_video_embed_field
-    - media_entity.bundle.video
+    - media.type.video
   module:
     - layout_builder
     - layout_discovery
