--- a/config/sync/core.entity_view_mode.media.banner.yml
+++ b/config/sync/core.entity_view_mode.media.banner.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: oh2KSmNu3l-yKK4kYPOinyHPnS9yZF4DxmVmIZUuPqI
 id: media.banner
