--- a/config/sync/core.entity_view_mode.media.full.yml
+++ b/config/sync/core.entity_view_mode.media.full.yml
@@ -1,9 +1,9 @@
-uuid: 18d285e2-17ba-4ea0-a6f2-2b9403c5ca7c
+uuid: 8daa2310-77cc-4883-a5fe-faa15fd28bf9
 langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: DM0HqROI22Ah9fCe-prNjKCiGyINyw7jq7_od2TIr8Q
 id: media.full
