--- a/config/sync/core.entity_view_mode.media.large_thumb.yml
+++ b/config/sync/core.entity_view_mode.media.large_thumb.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: 8Sz6wkKEArYPNTjXD4ZJrQOjV4qNr8KiE2eaUlnifyM
 id: media.large_thumb
