--- a/config/sync/core.entity_view_mode.media.medium.yml
+++ b/config/sync/core.entity_view_mode.media.medium.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: GWmRcNvY6bg6nnX0UdWVaIj_48z1pSP6pS1V2Ao5I7I
 id: media.medium
