--- a/config/sync/core.entity_view_mode.media.square.yml
+++ b/config/sync/core.entity_view_mode.media.square.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: w5QUmscFx8gsYdlw0PY6BxCSSMuNtld6vh58yVDnbUY
 id: media.square
