--- a/config/sync/core.entity_view_mode.media.token.yml
+++ b/config/sync/core.entity_view_mode.media.token.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
 _core:
   default_config_hash: g63AnYhz264HqgHoVpl01xm-ehI8PF5_G4-04YBW2Ro
 id: media.token
