--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -54,9 +54,9 @@ module:
   link: 0
   link_attributes: 0
   linkit: 0
-  media_entity: 0
-  media_entity_document: 0
-  media_entity_image: 0
+  media: 0
+  media_entity_actions: 0
+  media_entity_generic: 0
   menu_block: 0
   menu_ui: 0
   metatag: 0
