--- a/config/sync/entity_browser.browser.embedded_browser.yml
+++ b/config/sync/entity_browser.browser.embedded_browser.yml
@@ -36,7 +36,7 @@ widgets:
     settings:
       entity_type: media
       bundle: image
-      form_mode: media_browser
+      form_mode: default
       submit_text: Insert
     uuid: c90fe4ec-0deb-4d9d-bbb7-6942fe3d86e7
     weight: 2
@@ -46,7 +46,7 @@ widgets:
     settings:
       entity_type: media
       bundle: document
-      form_mode: media_browser
+      form_mode: default
       submit_text: Insert
     uuid: ad75d27c-c660-4f2b-b074-d5107f5b760c
     weight: 3
@@ -56,7 +56,7 @@ widgets:
     settings:
       entity_type: media
       bundle: video
-      form_mode: media_browser
+      form_mode: default
       submit_text: Insert
     uuid: dab0585e-0719-4dda-8d29-0cfc36a55793
     weight: 4
