--- a/config/sync/field.field.media.document.field_media_file.yml
+++ b/config/sync/field.field.media.document.field_media_file.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.media.field_media_file
-    - media_entity.bundle.document
+    - media.type.document
   module:
     - file
 _core:
