--- a/config/sync/field.field.media.video.field_media_categories.yml
+++ b/config/sync/field.field.media.video.field_media_categories.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.media.field_media_categories
-    - media_entity.bundle.video
+    - media.type.video
     - taxonomy.vocabulary.media_categories
 id: media.video.field_media_categories
 field_name: field_media_categories
