--- a/config/sync/field.field.node.blog.field_banner.yml
+++ b/config/sync/field.field.node.blog.field_banner.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_banner
-    - media_entity.bundle.image
+    - media.type.image
     - node.type.blog
 _core:
   default_config_hash: PymV3iBceCF6iWGroCOyKYbE_JItAP3PDdDARvVTFAI
