--- a/config/sync/field.field.node.landing_page.field_banner.yml
+++ b/config/sync/field.field.node.landing_page.field_banner.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_banner
-    - media_entity.bundle.image
+    - media.type.image
     - node.type.landing_page
 _core:
   default_config_hash: Fwlewyfhl_nOclc6ShD2L9m8uYCCAkA8_LgpEOAEGa0
