--- a/config/sync/field.field.node.news.field_banner.yml
+++ b/config/sync/field.field.node.news.field_banner.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_banner
-    - media_entity.bundle.image
+    - media.type.image
     - node.type.news
 _core:
   default_config_hash: _2ePp7RAr7qyaJXY1bxP_CXoZ2vbi2uOTv1zcG8xU80
