--- a/config/sync/field.field.node.page.field_banner.yml
+++ b/config/sync/field.field.node.page.field_banner.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_banner
-    - media_entity.bundle.image
+    - media.type.image
     - node.type.page
 _core:
   default_config_hash: UkUFqyQtYMgdMjEt-fLGXYrNj9AesVN_tzl0FEK-zB4
