--- a/config/sync/field.field.node.profiles.field_profile_image.yml
+++ b/config/sync/field.field.node.profiles.field_profile_image.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_profile_image
-    - media_entity.bundle.image
+    - media.type.image
     - node.type.profiles
 _core:
   default_config_hash: A7EZ-VjOrqCKJ-VEnd_7XbsMWrK0bkje_aVYyEUpktg
