--- a/config/sync/field.field.paragraph.image.field_oc_image.yml
+++ b/config/sync/field.field.paragraph.image.field_oc_image.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_oc_image
-    - media_entity.bundle.image
+    - media.type.image
     - paragraphs.paragraphs_type.image
 _core:
   default_config_hash: IYcPivO54ZpwhICu-VnrlZda3z6168QG9pOcu5_Tw-k
