--- a/config/sync/field.field.paragraph.landing_page_section.field_background_image.yml
+++ b/config/sync/field.field.paragraph.landing_page_section.field_background_image.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_background_image
-    - media_entity.bundle.image
+    - media.type.image
     - paragraphs.paragraphs_type.landing_page_section
 id: paragraph.landing_page_section.field_background_image
 field_name: field_background_image
