--- a/config/sync/field.field.paragraph.links_files.field_oc_file_multi.yml
+++ b/config/sync/field.field.paragraph.links_files.field_oc_file_multi.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_oc_file_multi
-    - media_entity.bundle.document
+    - media.type.document
     - paragraphs.paragraphs_type.links_files
 _core:
   default_config_hash: jqljGMBPYQ698Rs81SIeCj47LAMJJYDwfahuD4WxLs0
