--- a/config/sync/field.field.paragraph.slideshow.field_oc_image_multi.yml
+++ b/config/sync/field.field.paragraph.slideshow.field_oc_image_multi.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_oc_image_multi
-    - media_entity.bundle.image
+    - media.type.image
     - paragraphs.paragraphs_type.slideshow
 _core:
   default_config_hash: p2LPhL-29bTfYNxhLixNx6LAf8bq_BoMLxbPCNWjcMU
