--- a/config/sync/field.field.paragraph.video.field_oc_video.yml
+++ b/config/sync/field.field.paragraph.video.field_oc_video.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_oc_video
-    - media_entity.bundle.video
+    - media.type.video
     - paragraphs.paragraphs_type.video
 _core:
   default_config_hash: G3SEn6Xilf0CKce9aNHXeeKQVi8ej9O8g3gmtXbkEyA
