--- a/config/sync/field.field.user.user.field_user_image.yml
+++ b/config/sync/field.field.user.user.field_user_image.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.user.field_user_image
-    - media_entity.bundle.image
+    - media.type.image
   module:
     - user
 id: user.user.field_user_image
