--- a/config/sync/field.storage.media.field_media_file.yml
+++ b/config/sync/field.storage.media.field_media_file.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   module:
     - file
-    - media_entity
+    - media
 _core:
   default_config_hash: _D8FDsw5lMKZ5EJ2wVRuJLb34QUlx1gZCqg0XSZ2zVw
 id: media.field_media_file
