--- a/config/sync/field.storage.paragraph.field_background_image.yml
+++ b/config/sync/field.storage.paragraph.field_background_image.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - paragraphs
 _core:
   default_config_hash: 7T7Su-ugZ1S-UFAurfngkgC8PmEkisGnqTxbYbmhro4
