--- a/config/sync/field.storage.paragraph.field_oc_file_multi.yml
+++ b/config/sync/field.storage.paragraph.field_oc_file_multi.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - paragraphs
 _core:
   default_config_hash: BZaJOZNDbWszWFEeRgeEegSHM6rtS6to-0U9k1MXpbE
