--- a/config/sync/field.storage.paragraph.field_oc_image.yml
+++ b/config/sync/field.storage.paragraph.field_oc_image.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - paragraphs
 _core:
   default_config_hash: Ckc4r2zWP0h9ofHABenOpcmQ5ih8VPmZF0Xcio9bqfI
