--- a/config/sync/field.storage.paragraph.field_oc_image_multi.yml
+++ b/config/sync/field.storage.paragraph.field_oc_image_multi.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - paragraphs
 _core:
   default_config_hash: 64yhdZmqJ-Uxk4pm0yW2FryQFqhl-XGjTUvX26srjqY
