--- a/config/sync/field.storage.paragraph.field_oc_video.yml
+++ b/config/sync/field.storage.paragraph.field_oc_video.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - paragraphs
 _core:
   default_config_hash: s_Pg2CKjMP_KExj53PNt0_DjuAiaeHD7s-GxqSPfuqs
