--- a/config/sync/field.storage.user.field_user_image.yml
+++ b/config/sync/field.storage.user.field_user_image.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - user
 id: user.field_user_image
 field_name: field_user_image
