--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -2,6 +2,11 @@ module:
   addanother: 0
   addtoany: 0
   admin_toolbar: 0
+  advagg: 0
+  advagg_bundler: 0
+  advagg_css_minify: 0
+  advagg_js_minify: 0
+  advagg_mod: 0
   auto_entitylabel: 0
   automated_cron: 0
   block: 0
