Add advanced agg to confgi ignore

--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -3,5 +3,10 @@ ignored_config_entities:
   2: 'xmlsitemap.*'
   4: xmlsitemap_engines.settings
   6: system.performance.yml
+  8: advagg_bundler.settings.yml
+  10: advagg_css_minify.settings.yml
+  12: advagg_js_minify.settings.yml
+  14: advagg_mod.settings.yml
+  16: advagg.settings.yml
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
