--- a/web/themes/oc_patterns/package.json
+++ b/web/themes/oc_patterns/package.json
@@ -7,7 +7,7 @@
     "gulp": "^3.9.1"
   },
   "scripts": {
-    "start": "gulp clean && gulp compile && gulp theme",
+    "start": "gulp compile && gulp theme",
     "postinstall": "rm -rf pattern-lab && composer create-project -n pattern-lab/edition-twig-standard pattern-lab && rm -rf pattern-lab/source && ln -s ../components pattern-lab/source"
   }
 }
