--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/colors.yml
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/colors.yml
@@ -30,7 +30,7 @@ items:
   - name: $imgOverlay
     value: 'rgba(35,35,35,0.4)'
   - name: $unpub
-    value: '#fff4fa'
+    value: '#f8e8f1'
   - name: $unpubDark
     value: '#fdd5dd'
   - name: $siteBack
