--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,9 +1,9 @@
 name: Upstream
 mail: info@electriccitizen.com
-slogan: 'The bird'
+slogan: ''
 page:
   403: ''
-  404: /node/2
+  404: ''
   front: /node/3
 admin_compact_mode: false
 weight_select_max: 100
