--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -27,6 +27,7 @@ settings:
             - JustifyLeft
             - JustifyCenter
             - JustifyRight
+            - Blockquote
         -
           name: Lists
           items:
@@ -49,8 +50,8 @@ settings:
         -
           name: Tools
           items:
-            - RemoveFormat
             - Source
+            - RemoveFormat
             - Undo
             - Redo
         -
@@ -59,8 +60,8 @@ settings:
             - Cut
             - Copy
             - Paste
-            - PasteFromWord
             - PasteText
+            - PasteFromWord
         -
           name: 'Block Formatting'
           items:
@@ -70,10 +71,10 @@ settings:
           items:
             - Styles
   plugins:
-    stylescombo:
-      styles: "span.highlight|Highlight\r\ndiv.warning|Warning\r\nsmall|Small"
     language:
       language_list: un
+    stylescombo:
+      styles: "span.highlight|Highlight\r\ndiv.warning|Warning\r\nsmall|Small\r\nspan.button|Button"
     linkit:
       linkit_profile: wysiwyg
 image_upload:
