--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -27,7 +27,9 @@ permissions:
   - 'bypass honeypot protection'
   - 'change own username'
   - 'create blog content'
+  - 'create document media'
   - 'create event content'
+  - 'create image media'
   - 'create landing_page content'
   - 'create media'
   - 'create news content'
@@ -59,14 +61,18 @@ permissions:
   - 'create paragraph content video'
   - 'create profiles content'
   - 'create url aliases'
+  - 'create video media'
   - 'create webform'
   - 'delete media'
   - 'delete own blog content'
+  - 'delete own document media'
   - 'delete own event content'
+  - 'delete own image media'
   - 'delete own landing_page content'
   - 'delete own news content'
   - 'delete own page content'
   - 'delete own profiles content'
+  - 'delete own video media'
   - 'delete own webform'
   - 'delete own webform submission'
   - 'delete paragraph content accordion_group'
@@ -103,11 +109,14 @@ permissions:
   - 'edit any webform'
   - 'edit own blog content'
   - 'edit own comments'
+  - 'edit own document media'
   - 'edit own event content'
+  - 'edit own image media'
   - 'edit own landing_page content'
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own profiles content'
+  - 'edit own video media'
   - 'edit own webform submission'
   - 'edit terms in categories'
   - 'edit terms in position'
