--- a/config/sync/user.role.senior_editor.yml
+++ b/config/sync/user.role.senior_editor.yml
@@ -23,6 +23,7 @@ permissions:
   - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'access webform overview'
+  - 'access webform submission log'
   - 'add content to books'
   - 'administer blocks'
   - 'administer book outlines'
@@ -51,7 +52,9 @@ permissions:
   - 'cancel account'
   - 'change own username'
   - 'create blog content'
+  - 'create document media'
   - 'create event content'
+  - 'create image media'
   - 'create landing_page content'
   - 'create media'
   - 'create new books'
@@ -84,15 +87,19 @@ permissions:
   - 'create paragraph content video'
   - 'create profiles content'
   - 'create url aliases'
+  - 'create video media'
   - 'create webform'
   - 'delete all revisions'
   - 'delete any blog content'
+  - 'delete any document media'
   - 'delete any event content'
+  - 'delete any image media'
   - 'delete any landing_page content'
   - 'delete any media'
   - 'delete any news content'
   - 'delete any page content'
   - 'delete any profiles content'
+  - 'delete any video media'
   - 'delete any webform'
   - 'delete any webform submission'
   - 'delete blog revisions'
@@ -101,11 +108,14 @@ permissions:
   - 'delete media'
   - 'delete news revisions'
   - 'delete own blog content'
+  - 'delete own document media'
   - 'delete own event content'
+  - 'delete own image media'
   - 'delete own landing_page content'
   - 'delete own news content'
   - 'delete own page content'
   - 'delete own profiles content'
+  - 'delete own video media'
   - 'delete own webform'
   - 'delete own webform submission'
   - 'delete page revisions'
@@ -139,20 +149,26 @@ permissions:
   - 'delete terms in position'
   - 'delete terms in tags'
   - 'edit any blog content'
+  - 'edit any document media'
   - 'edit any event content'
+  - 'edit any image media'
   - 'edit any landing_page content'
   - 'edit any news content'
   - 'edit any page content'
   - 'edit any profiles content'
+  - 'edit any video media'
   - 'edit any webform'
   - 'edit any webform submission'
   - 'edit own blog content'
   - 'edit own comments'
+  - 'edit own document media'
   - 'edit own event content'
+  - 'edit own image media'
   - 'edit own landing_page content'
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own profiles content'
+  - 'edit own video media'
   - 'edit own webform'
   - 'edit own webform submission'
   - 'edit terms in categories'
@@ -200,6 +216,7 @@ permissions:
   - 'use ipe with page manager'
   - 'use panels dashboard'
   - 'use text format full_html'
+  - 'view all media revisions'
   - 'view all revisions'
   - 'view any webform submission'
   - 'view blog revisions'
