--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -74,7 +74,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          quantity: 9
+          quantity: 5
       style:
         type: default
         options:
@@ -578,7 +578,17 @@ display:
           entity_field: created
           plugin_id: date
       header: {  }
-      footer: {  }
+      footer:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Displaying @start - @end of @total'
+          plugin_id: result
       empty:
         area_text_custom:
           id: area_text_custom
