--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -73,7 +73,7 @@ settings:
     language:
       language_list: un
     stylescombo:
-      styles: "span.highlight|Highlight\r\ndiv.warning|Warning\r\nsmall|Small\r\nspan.button|Button"
+      styles: "span.highlight|Highlight\r\ndiv.warning|Warning\r\nsmall|Small\r\ndiv.button|Button"
     linkit:
       linkit_profile: wysiwyg
 image_upload:
