--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "drupal/addtoany": "~1",
     "drupal/admin_toolbar": "~1",
     "drupal/advagg": "^3.5",
+    "drupal/antibot": "^1.2",
     "drupal/auto_entitylabel": "^2.0@beta",
     "drupal/components": "^1.0",
     "drupal/config_devel": "^1.2",
@@ -61,7 +62,6 @@
     "drupal/easy_breadcrumb": "^1.6",
     "drupal/entity_browser": "^2.0",
     "drupal/entity_embed": "^1.0@beta",
-    "drupal/environment_indicator": "~3",
     "drupal/eu_cookie_compliance": "^1.0",
     "drupal/extlink": "^1.1",
     "drupal/field_group": "^1.0@RC",
