--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -13,7 +13,6 @@ dependencies:
     - entity_browser_entity_form
     - inline_entity_form
     - metatag
-    - path
     - text
 _core:
   default_config_hash: US_pEMsFWgw802CaQVHCCiPSQAh4r2yFXZJgb9mTCAg
@@ -41,6 +40,9 @@ content:
       allow_existing: true
       match_operator: CONTAINS
       override_labels: false
+      collapsible: false
+      collapsed: false
+      allow_duplicate: false
     third_party_settings:
       entity_browser_entity_form:
         entity_browser_id: image_browser
@@ -53,16 +55,10 @@ content:
     type: options_select
     region: content
   field_metatags:
-    weight: 26
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_firehose
-    region: content
-  path:
-    type: path
     weight: 6
     settings: {  }
     third_party_settings: {  }
+    type: metatag_firehose
     region: content
   promote:
     type: boolean_checkbox
@@ -75,7 +71,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 7
     region: content
     third_party_settings: {  }
   sticky:
@@ -93,9 +89,8 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
-  url_redirects:
-    weight: 50
-    region: content
 hidden:
   created: true
+  path: true
   uid: true
+  url_redirects: true
