--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   advagg_mod: 0
+  antibot: 0
   auto_entitylabel: 0
   automated_cron: 0
   block: 0
